// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedFilterSwitch expect to render without error 1`] = `
<DocumentFragment>
  <label
    class="pf-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-1"
    data-ouia-component-type="PF4/Switch"
    data-ouia-safe="true"
    for="selected-filter-swtich"
  >
    <input
      aria-label="selected-filter-swtich"
      checked=""
      class="pf-c-switch__input"
      id="selected-filter-swtich"
      type="checkbox"
    />
    <span
      class="pf-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-on"
    >
      Selected only
    </span>
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-off"
    >
      Selected only
    </span>
  </label>
</DocumentFragment>
`;

exports[`SelectedFilterSwitch expect to render without error when isChecked is false 1`] = `
<DocumentFragment>
  <label
    class="pf-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-2"
    data-ouia-component-type="PF4/Switch"
    data-ouia-safe="true"
    for="selected-filter-swtich"
  >
    <input
      aria-label="selected-filter-swtich"
      class="pf-c-switch__input"
      id="selected-filter-swtich"
      type="checkbox"
    />
    <span
      class="pf-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-on"
    >
      Selected only
    </span>
    <span
      aria-hidden="true"
      class="pf-c-switch__label pf-m-off"
    >
      Selected only
    </span>
  </label>
</DocumentFragment>
`;
